# Classe-machine-distributrice

./: CMakeLists.txt  CSVParser.cpp  CSVParser.h  Cases.cpp  Cases.h  MachineDistributrice.cpp  MachineDistributrice.h  Parser.h  admin.cpp  admin.h  admin.ui  boisson.cpp  boisson.h  classDiagram.drawio  fonction.cpp  fonction.h  fproduit1.cpp  fproduit1.h  fproduit1.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  nourriture.cpp  nourriture.h  produit.cpp  produit.h  ressources.qrc
images/: Produits_avec_noms.csv
